--- a/src/Applications/__/gui.qrc
+++ b/src/Applications/__/gui.qrc
@@ -27,6 +27,7 @@
         <file>res/maximize-button2.png</file>
         <file>res/minimize-button1.png</file>
         <file>res/arrow_icon.png</file>
+        <file>res/rrotate.cur</file>
         <file alias="loading">res/loading_gif.gif</file>
         <file alias="closeTab">res/closeTab_icon.png</file>
     </qresource>
